<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp" >

    <TextView
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/registerUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/userNameET"
        android:hint="@string/userName"
        android:layout_margin="16dp"
        android:inputType="text"
        android:maxLength="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/passwordET"
        android:hint="@string/password"
        android:layout_margin="16dp"
        android:inputType="textPassword"
        android:maxLength="16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="no"/>

    <EditText
        android:id="@+id/confirmPasswordET"
        android:hint="@string/confirmPassword"
        android:layout_margin="16dp"
        android:inputType="textPassword"
        android:maxLength="16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="no"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/adminSwitch"
        android:hint="@string/admin"
        android:layout_margin="16dp"
        android:inputType="textPassword"
        android:maxLength="16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="no"/>

    <Button
        android:id="@+id/registerButtonET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/register"
        android:textColor="@android:color/white" />

</LinearLayout>