<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp" >

    <TextView
        android:id="@+id/adminNameTV"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/addUserBtnET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/addUser"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/addItemBtnET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/addItem"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/editUsersBtnET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/editUsers"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/editItemsBtnET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/editItems"
        android:textColor="@android:color/white" />

</LinearLayout>